# ScreenMirroring

./: CMakeLists.txt  README.md  server.crt  server.key
public/: index.html  send.html
server/: main.cpp
